# RoverAI

./: README.md  actions.jsonl  decisions.jsonl  found_items.jsonl  movement_script_rover_agent.py  observations.jsonl  orientations.jsonl  plan_2.md  plans.md  plans_3.md  pyproject.toml  rmtp_server.py  rover_agent.py  self_modifying_rover_agent.py
act/: execute_decision.py
decide/: choose_next_action.py
observe/: capture_and_analyze.py
orient/: interpret_observation.py
